<resources>
    <string name="app_name">BiometricAttendance</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Biometric Attendance</string>
    <string name="Init">INIT</string>
    <string name="UnInit">UNINIT</string>
    <string name="ExtractISO">ISO(FMR)</string>
    <string name="ExtractWSQ">WSQ</string>
    <string name="MatchISO">MATCH ISO</string>
    <string name="foorLoop">Init/Uninit</string>
    <string name="ClearLog">CLEAR LOG</string>
    <string name="SyncCapture">CAPTURE</string>
    <string name="StopSyncCapture">STOP CAP</string>
    <string name="WriteBit">Write Bit</string>
    <string name="ReadBit">Read Bit</string>
    <string name="ChangeKey">Change Key</string>
    <string name="GetKey">Get Key</string>

    <string-array name="MFS100Ver">
        <item>41</item>
        <item>31</item>
    </string-array>


    <string name="EmployeeName">Enter Employee Name</string>
    <string name="MobileNo">Enter Mobile NO.</string>
    <string name="DistrictCode">Enter District Code</string>
    <string name="BlockCode">Enter Block Code</string>
    <string name="ClusterCode">Enter Cluster Code</string>
    <string name="SchoolCode">Enter School Code</string>
    <string name="RegisterAction">Regsiter Now</string>

    <string name="EnterMobileNo">Search Using Mobile No. :</string>

    <string name="BtnRegistration">Regsiteration Form</string>
    <string name="BtnAttendance">Attendance Form</string>

    <string name="title_activity_preference">Preference</string>
</resources>
